# LedED

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: editor.cpp  editor.h  export.cpp  gui.cpp  iconembed.h  main.cpp  menu.cpp  openfiledialog_impl.cpp  toolbox.cpp
